# crumble

./: Cargo.toml  readme.md
crumble/: Cargo.toml
crumble-wasm/: Cargo.toml
crumble-wasm/src/: lib.rs
crumble/src/: lib.rs  math.rs
game/: index.js  package.json  rollup.config.js  run
src/: lib.rs  math.rs  tests.rs
